Getting rid of parallax until it's fixed on mobile

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -93,6 +93,16 @@
   justify-content: center;
   min-height: 30rem;
   padding: 3rem;
+
+  background: linear-gradient(
+      to right bottom,
+      rgba(255, 255, 255, 0.205),
+      rgba(255, 255, 255, 0.219)
+    ),
+    url("../../images/home/impact.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .circles {
